Minor fixes from PR review
- remove redundant category title
- refactor code (use values instead of each, slim down const def)
- add styling to scrollbar
[#163131891]

--- a/src/components/navigation/right-nav.sass
+++ b/src/components/navigation/right-nav.sass
@@ -75,6 +75,16 @@ $list-item-scale: 0.11
       .loading
         padding: 10px
 
+      ::-webkit-scrollbar
+        width: 7px
+      ::-webkit-scrollbar-track
+        background: #f1f1f1
+      ::-webkit-scrollbar-thumb
+        background: $color3
+        border-radius: $border-radius
+      ::-webkit-scrollbar-thumb:hover
+        background: #a3a3a3
+
       button
         padding: $half-padding
         margin: $margin
